Bug 3095 - nv DPMS panel fixes
Summary: nv DPMS panel fixes
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/nVidia (open) (show other bugs)
Version: git
Hardware: All All
: high normal
Assignee: Alan Coopersmith
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-04-21 15:16 UTC by Alan Coopersmith
Modified: 2005-04-20 22:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch incorporating fix from Mark Vojkovich (4.61 KB, patch)
2005-04-21 15:22 UTC, Alan Coopersmith
alan.coopersmith: 6.8-branch?
Details | Splinter Review

Description Alan Coopersmith 2005-04-21 15:16:02 UTC
The Xorg nv driver should incorporate these fixes from Mark Vojkovich:

Changes by:	mvojkovi@public.xfree86.org.	05/04/16 16:57:26

Log message:
     Some panel DPMS support that went into 4.5 really only worked for TMDS
  and caused some panel blooming on some LVDS panels.  This skips the
  panel DPMS code when the panel is LVDS.

Modified files:
      xc/programs/Xserver/hw/xfree86/drivers/nv/:
        nv_driver.c nv_setup.c nv_type.h 
  
  Revision      Changes    Path
  1.133         +10 -6     xc/programs/Xserver/hw/xfree86/drivers/nv/nv_driver.c
  1.45          +10 -1     xc/programs/Xserver/hw/xfree86/drivers/nv/nv_setup.c
  1.51          +2 -1      xc/programs/Xserver/hw/xfree86/drivers/nv/nv_type.h
Comment 1 Alan Coopersmith 2005-04-21 15:22:11 UTC
Created attachment 2501 [details] [review]
Patch incorporating fix from Mark Vojkovich
Comment 2 Alan Coopersmith 2005-04-21 15:29:16 UTC
Fix committed to HEAD:

CVSROOT:	/cvs/xorg
Module name:	xc
Changes by:	alanc@gabe.freedesktop.org	05/04/21 15:25:47

Log message:
  2005-04-21  Alan Coopersmith  <alan.coopersmith@sun.com>
  
  	* programs/Xserver/hw/xfree86/drivers/nv/nv_driver.c
  	* programs/Xserver/hw/xfree86/drivers/nv/nv_setup.c
  	* programs/Xserver/hw/xfree86/drivers/nv/nv_type.h
  	Bugzilla #3095 <https://bugs.freedesktop.org/show_bug.cgi?id=3095>
  	Patch #2501 <https://bugs.freedesktop.org/attachment.cgi?id=2501>
  	nv DPMS panel fixes 	(Mark Vojkovich)

Modified files:
      ./:
        ChangeLog 
      xc/programs/Xserver/hw/xfree86/drivers/nv/:
        nv_driver.c nv_setup.c nv_type.h 
  
  Revision      Changes    Path
  1.888                    xc/ChangeLog
  1.11                     xc/programs/Xserver/hw/xfree86/drivers/nv/nv_driver.c
  1.5                      xc/programs/Xserver/hw/xfree86/drivers/nv/nv_setup.c
  1.5                      xc/programs/Xserver/hw/xfree86/drivers/nv/nv_type.h


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.