programs/Xserver/hw/xfree86/drivers/nv/nv_driver.c programs/Xserver/hw/xfree86/drivers/nv/nv_setup.c //bugs.freedesktop.org/show_bug.cgi?id=3095> Patch #2501     <https://bugs.freedesktop.org/attachment.cgi?id=2501> nv DPMS panel     fixes (Mark Vojkovich)